ghc-4335c07/testsuite/tests/typecheck/should_fail/T9109.hs
{-# LANGUAGE GADTs #-}

module T9109 where

data G a where
  GBool :: G Bool

foo GBool = True
